# universal_robot

./: .gitignore  AUTHORS  COPYING  INSTALL  Makefile.am  configure.ac
kavrakilab_scene/: classFancy.robray  setTable-0.robray  tableFancy.robray
robotiq_force_torque_sensor/: .clang-format
robotiq_force_torque_sensor/launch/: force_torque_sensor.launch  force_torque_sensor_test.launch
robotiq_force_torque_sensor/meshes/collision/: G-061-COUPLING_BLANK.STEP  G-062-COUPLING_G-50-4M6-1D6.STEP  G-063-COUPLING_G-31_5-4M5-1D5.STEP
robotiq_force_torque_sensor/meshes/visual/: G-064-COUPLING_G-40-4M6-1D6.STEP
robotiq_force_torque_sensor/src/: rq_sensor_com.cpp
robotiq_force_torque_sensor/urdf/: robotiq_fts300.urdf.xacro
ur10_moveit_config/launch/: moveit_rviz.launch
ur5_double_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur5_double_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ur5_double.srdf
ur5_double_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  my_launch.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur5_double_moveit_controller_manager.launch.xml  ur5_double_moveit_planning_execution.launch  warehouse.launch
ur5_moveit_config/config/: kinematics.yaml  ompl_luna_planning.yaml  ompl_planning.yaml  ur5.srdf
ur5_moveit_config/launch/: move_group.launch  moveit.rviz  ompl_luna_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  trajoptbenchmark.launch
ur5_robotiq85_kinect_moveit_config/launch/: move_group.launch  moveit.rviz  moveit_rviz.launch  planning_context.launch  ur5_robotiq85_kinect_moveit_planning_execution.launch
ur5_robotiq85_moveit_config/: package.xml
ur5_robotiq85_moveit_config/benchmarks/: meta_planner_script.py  ur5_bench.launch
ur5_robotiq85_moveit_config/benchmarks/bench_scene_planner_params/: andrewstable-ompl_luna.yaml  andrewstable-stomp.yaml  column-ompl_luna.yaml  column-stomp.yaml  emptytable-ompl_luna.yaml  emptytable-stomp.yaml  narrowspace-ompl_luna.yaml  narrowspace-stomp.yaml  narrowspacemedium-ompl_luna.yaml  narrowspacemedium-stomp.yaml  narrowspacesmall-chomp.yaml  narrowspacesmall-ompl_luna.yaml  narrowspacesmall-stomp.yaml  shortcolumn-chomp.yaml  shortcolumn-ompl_luna.yaml  shortcolumn-stomp.yaml  shortcolumn.yaml  verticalnarrowpath-chomp.yaml  verticalnarrowpath-ompl_luna.yaml  verticalnarrowpath-stomp.yaml
ur5_robotiq85_moveit_config/benchmarks/pause_params/: andrewstable-chomp.yaml  column-chomp.yaml  emptytable-chomp.yaml  emptytable2-ompl_luna.yaml  narrowspace-chomp.yaml  narrowspacemedium-chomp.yaml
ur5_robotiq85_moveit_config/config/: chomp_planning.yaml  controllers.yaml  left_ur5_robotiq85.srdf  ompl_luna_planning.yaml  ompl_planning.yaml  right_ur5_robotiq85.srdf  ur5_robotiq85.srdf
ur5_robotiq85_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  my_launch.launch  ompl_luna_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  stomp_planning_pipeline.launch.xml  ur5_robotiq85_moveit_planning_execution.launch
ur5_table_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur5_table_moveit_config/config/: ur5_table.srdf
ur5_table_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur5_table_moveit_controller_manager.launch.xml  ur5_table_moveit_planning_execution.launch  warehouse.launch
ur_description/: CMakeLists.txt  package.xml  urdf.rviz
ur_description/cmake/: FindAMINO.cmake
ur_description/launch/: ur5_double_upload.launch  ur5_robotiq85_display.launch  ur5_robotiq85_upload.launch  ur5_table.launch
ur_description/meshes/ur5/collision/: forearm_snake.stl  upperarm_snake.stl
ur_description/meshes/ur5/visual/: forearm_snake.dae  upperarm_snake.dae
ur_description/urdf/: 2_ur5.urdf  2_ur5.urdf.xacro  left_ur5_robotiq_robot_limited.urdf.xacro  right_ur5_robotiq_robot_limited.urdf.xacro  ur5.urdf.xacro  ur5_double.xacro  ur5_double_limited.urdf.xacro  ur5_robot.urdf.xacro  ur5_robotiq85_kinect_table.urdf.xacro  ur5_robotiq_robot.urdf.xacro  ur5_robotiq_robot_limited.urdf.xacro  ur5_table.urdf.xacro  ur5_table_limited.urdf.xacro
ur_description/urdf/sensors/: kinect.urdf.xacro  kinect_properties.urdf.xacro
ur_gazebo/: CMakeLists.txt  package.xml
ur_gazebo/controller/: arm_controller_ur5.yaml  arm_controller_ur5_right.yaml
ur_gazebo/launch/: controller_utils.launch  set_initial_state.launch  ur5.launch  ur5_double.launch  ur5_robotiq85.launch  ur5_robotiq85_kinect_table.launch  ur5_robotiq85_table.launch  ur5_table.launch
ur_gazebo/nodes/: set_initial_state.py  set_initial_state_double.py
ur_kinematics/src/: ur_moveit_plugin.cpp
